--- a/Din_Reto0/src/model/BDConnect.properties
+++ b/Din_Reto0/src/model/BDConnect.properties
@@ -3,7 +3,7 @@
 # and open the template in the editor.
 
 bd = reto0
-con = jdbc:mysql://localhost:3306/reto0
-driver = 
-user = root
-passw = abcd*1234
+Conn = jdbc:mysql://localhost:3306/reto0
+Driver = com.mysql.jdbc.Driver
+BDuser = root
+BDPass = abcd*1234
