--- a/Din_Reto0/src/application/Config.properties
+++ b/Din_Reto0/src/application/Config.properties
@@ -2,7 +2,7 @@
 # To change this template file, choose Tools | Templates
 # and open the template in the editor.
 
-view_type = text
-#view_type = javafx
-model_type = file
-#model_type = db
+#view_type = text
+view_type = javafx
+#model_type = file
+model_type = db
